OSSM/1_34/must-gather.local.2392184673243315730/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-88edd13801b2ba7aa4bc7c344e18992e2ebd100cc49e959b315bb7e8c8d20298/namespaces/knative-eventing/security.istio.io/authorizationpolicies/allow-kafka-channel-to-mt-channel-based-broker-filter.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"security.istio.io/v1beta1","kind":"AuthorizationPolicy","metadata":{"annotations":{},"name":"allow-kafka-channel-to-mt-channel-based-broker-filter","namespace":"knative-eventing"},"spec":{"action":"ALLOW","rules":[{"from":[{"source":{"namespaces":["knative-eventing"],"principals":["cluster.local/ns/knative-eventing/sa/knative-kafka-channel-data-plane"]}}],"to":[{"operation":{"methods":["POST"]}}]}],"selector":{"matchLabels":{"app.kubernetes.io/component":"broker-filter"}}}}
  creationTimestamp: "2025-01-09T14:46:19Z"
  generation: 1
  managedFields:
  - apiVersion: security.istio.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
      f:spec:
        .: {}
        f:action: {}
        f:rules: {}
        f:selector:
          .: {}
          f:matchLabels:
            .: {}
            f:app.kubernetes.io/component: {}
    manager: kubectl-client-side-apply
    operation: Update
    time: "2025-01-09T14:46:19Z"
  name: allow-kafka-channel-to-mt-channel-based-broker-filter
  namespace: knative-eventing
  resourceVersion: "43630"
  uid: bf59618b-f0da-4235-9141-3447b8b07dbb
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces:
        - knative-eventing
        principals:
        - cluster.local/ns/knative-eventing/sa/knative-kafka-channel-data-plane
    to:
    - operation:
        methods:
        - POST
  selector:
    matchLabels:
      app.kubernetes.io/component: broker-filter
